# rioutil

./: .gitignore  AUTHORS  ChangeLog  DIFFS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  mkinstalldirs  updatevers.pl
debian/: Makefile.am  changelog  control  copyright  dirs  lintian.overrides  rules
include/: Makefile.am  driver.h  rio.h  rio_ids.h  rioi.h
librioutil/: Makefile.am  byteorder.c  cksum.c  downloadable.c  driver_file.c  driver_libusb.c  file_list.c  genre.h  id3.c  log.c  mp3.c  playlist.c  playlist_file.c  playlist_file.h  rio.c  rioio.c  riolog.h  song_management.c  util.c
linux_driver/: Makefile.am  rio_usb.h  rios.c
man/: Makefile.am  rioutil.1.in
spec/: Makefile.am  rioutil-libusb.spec.in  rioutil-usbdevfs.spec.in  rioutil.spec.in
src/: Makefile.am  getopt.c  getopt1.c  main.c  main.h
